# deadbeef-lyricbar

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  debug.h  default.nix  gettext.h  main.c  main.h  ui.cpp  ui.h  utils.cpp  utils.h  wercker.yml
gettext/pot/: deadbeef-lyricbar.pot
gettext/ru/: deadbeef-lyricbar.po
po/ru/: deadbeef-lyricbar.po
src/: debug.h  main.c  main.h  ui.cpp  ui.h  utils.cpp  utils.h
